Edited codestyle to Google codestyle.
https://github.com/google/styleguide/blob/gh-pages/intellij-java-google-style.xml