@@ -1,6 +1,7 @@
 package xyz.raitaki.legendquests.events.listeners.vanilla;
 
-import static xyz.raitaki.legendquests.questhandlers.gui.QuestGui.EditGuiTypeEnum.*;
+import static xyz.raitaki.legendquests.questhandlers.gui.QuestGui.EditGuiTypeEnum.CHECKPOINT;
+import static xyz.raitaki.legendquests.questhandlers.gui.QuestGui.EditGuiTypeEnum.REWARD;
 
 import io.papermc.paper.event.player.AsyncChatEvent;
 import net.kyori.adventure.text.TextComponent;
@@ -9,7 +10,6 @@ import org.bukkit.entity.Entity;
 import org.bukkit.entity.Player;
 import org.bukkit.event.EventHandler;
 import org.bukkit.event.Listener;
-import org.bukkit.event.player.PlayerDropItemEvent;
 import org.bukkit.event.player.PlayerInteractAtEntityEvent;
 import org.bukkit.event.player.PlayerJoinEvent;
 import org.bukkit.event.player.PlayerQuitEvent;
@@ -19,7 +19,6 @@ import xyz.raitaki.legendquests.questhandlers.QuestBase;
 import xyz.raitaki.legendquests.questhandlers.QuestCheckpoint.CheckPointTypeEnum;
 import xyz.raitaki.legendquests.questhandlers.QuestManager;
 import xyz.raitaki.legendquests.questhandlers.gui.CheckpointGui;
-import xyz.raitaki.legendquests.questhandlers.gui.QuestGui.EditGuiTypeEnum;
 import xyz.raitaki.legendquests.questhandlers.gui.RewardGui;
 import xyz.raitaki.legendquests.questhandlers.playerhandlers.PlayerCheckpoint;
 import xyz.raitaki.legendquests.questhandlers.playerhandlers.PlayerQuest;
@@ -29,74 +28,95 @@ import xyz.raitaki.legendquests.questhandlers.playerhandlers.checkpoints.PlayerI
 
 public class PlayerEventListener implements Listener {
 
-    @EventHandler
-    public void onPlayerJoin(PlayerJoinEvent event) {
-        QuestManager.addBaseQuestToPlayer(event.getPlayer(), QuestManager.getBaseQuests().get(0));
-        QuestManager.getBaseQuests().getFirst().showGui(event.getPlayer());
-    }
+  @EventHandler
+  public void onPlayerJoin(PlayerJoinEvent event) {
+    QuestManager.addBaseQuestToPlayer(event.getPlayer(), QuestManager.getBaseQuests().get(0));
+    QuestManager.getBaseQuests().getFirst().showGui(event.getPlayer());
+  }
 
-    @EventHandler
-    public void onPlayerQuit(PlayerQuitEvent event) {
+  @EventHandler
+  public void onPlayerQuit(PlayerQuitEvent event) {
 
-    }
+  }
 
-    @EventHandler
-    public void onAsyncChat(AsyncChatEvent event){
-        Player player = event.getPlayer();
-        TextComponent message = (TextComponent) event.message();
-        String text = message.content();
-        QuestBase quest = QuestManager.getQuestBaseFromEditor(player);
-        if(quest == null) return;
-        if(quest.getQuestGUI().getEditGuiType() == null) return;
-        if(quest.getQuestGUI().getEditGuiType() == REWARD){
-            RewardGui rewardGUI = quest.getQuestGUI().getEditedReward();
-            if(rewardGUI == null) return;
-            rewardGUI.setChatMessage(text);
+  @EventHandler
+  public void onAsyncChat(AsyncChatEvent event) {
+    Player player = event.getPlayer();
+    TextComponent message = (TextComponent) event.message();
+    String text = message.content();
+    QuestBase quest = QuestManager.getQuestBaseFromEditor(player);
+      if (quest == null) {
+          return;
+      }
+      if (quest.getQuestGUI().getEditGuiType() == null) {
+          return;
+      }
+    if (quest.getQuestGUI().getEditGuiType() == REWARD) {
+      RewardGui rewardGUI = quest.getQuestGUI().getEditedReward();
+        if (rewardGUI == null) {
+            return;
         }
-        if(quest.getQuestGUI().getEditGuiType() == CHECKPOINT){
-            CheckpointGui checkpointGUI = quest.getQuestGUI().getEditedCheckpoint();
-            if(checkpointGUI == null) return;
-            checkpointGUI.setChatMessage(text);
+      rewardGUI.setChatMessage(text);
+    }
+    if (quest.getQuestGUI().getEditGuiType() == CHECKPOINT) {
+      CheckpointGui checkpointGUI = quest.getQuestGUI().getEditedCheckpoint();
+        if (checkpointGUI == null) {
+            return;
         }
-        event.setCancelled(true);
+      checkpointGUI.setChatMessage(text);
+    }
+    event.setCancelled(true);
+  }
+
+  @EventHandler
+  public void onPlayerInteract(PlayerInteractAtEntityEvent event) {
+    Player player = event.getPlayer();
+    Entity entity = event.getRightClicked();
+    QuestPlayer questPlayer = QuestManager.getQuestPlayerFromPlayer(player);
+    PlayerQuest playerQuest = questPlayer.getPlayerQuestByCheckpointType(
+        CheckPointTypeEnum.INTERECT);
+
+      if (playerQuest == null) {
+          return;
+      }
+
+    PlayerCheckpoint playerCheckpoint = playerQuest.getCheckPoint();
+    String entityName = entity.getName();
+      if (!(playerCheckpoint instanceof PlayerInteractionCheckpoint interactionCheckpoint)) {
+          return;
+      }
+
+    String questEntityName = interactionCheckpoint.getNpcName();
+      if (!entityName.equals(questEntityName)) {
+          return;
+      }
+
+    PlayerQuestInteractEvent playerQuestInteractEvent = new PlayerQuestInteractEvent(playerQuest,
+        questPlayer, entity);
+    Bukkit.getPluginManager().callEvent(playerQuestInteractEvent);
+  }
+
+  @EventHandler
+  public void onPlayerSwapHandItems(PlayerSwapHandItemsEvent event) {
+    Player player = event.getPlayer();
+    QuestPlayer questPlayer = QuestManager.getQuestPlayerFromPlayer(player);
+    PlayerQuest playerQuest = questPlayer.getPlayerQuestByCheckpointType(
+        CheckPointTypeEnum.CONVERSATION);
+
+      if (playerQuest == null) {
+          return;
+      }
+    PlayerConversationCheckpoint playerCheckpoint = (PlayerConversationCheckpoint) playerQuest.getCheckPoint();
+      if (playerCheckpoint == null) {
+          return;
+      }
+
+    if (player.isSneaking()) {
+      playerCheckpoint.doAnswer();
+    } else {
+      playerCheckpoint.changeAnswer();
     }
 
-    @EventHandler
-    public void onPlayerInteract(PlayerInteractAtEntityEvent event) {
-        Player player = event.getPlayer();
-        Entity entity = event.getRightClicked();
-        QuestPlayer questPlayer = QuestManager.getQuestPlayerFromPlayer(player);
-        PlayerQuest playerQuest = questPlayer.getPlayerQuestByCheckpointType(CheckPointTypeEnum.INTERECT);
-
-        if(playerQuest == null) return;
-
-        PlayerCheckpoint playerCheckpoint = playerQuest.getCheckPoint();
-        String entityName = entity.getName();
-        if(!(playerCheckpoint instanceof PlayerInteractionCheckpoint interactionCheckpoint)) return;
-
-        String questEntityName = interactionCheckpoint.getNpcName();
-        if(!entityName.equals(questEntityName)) return;
-
-        PlayerQuestInteractEvent playerQuestInteractEvent = new PlayerQuestInteractEvent(playerQuest, questPlayer, entity);
-        Bukkit.getPluginManager().callEvent(playerQuestInteractEvent);
-    }
-
-    @EventHandler
-    public void onPlayerSwapHandItems(PlayerSwapHandItemsEvent event) {
-        Player player = event.getPlayer();
-        QuestPlayer questPlayer = QuestManager.getQuestPlayerFromPlayer(player);
-        PlayerQuest playerQuest = questPlayer.getPlayerQuestByCheckpointType(CheckPointTypeEnum.CONVERSATION);
-
-        if(playerQuest == null) return;
-        PlayerConversationCheckpoint playerCheckpoint = (PlayerConversationCheckpoint) playerQuest.getCheckPoint();
-        if(playerCheckpoint == null) return;
-
-        if(player.isSneaking()){
-            playerCheckpoint.doAnswer();
-        }else {
-            playerCheckpoint.changeAnswer();
-        }
-
-        event.setCancelled(true);
-    }
+    event.setCancelled(true);
+  }
 }
